zerocopy-derive/tests/ui-msrv/union.stderr
error: unsupported on types with type parameters
  --> tests/ui-msrv/union.rs:35:10
   |
35 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be #[repr(C)], #[repr(packed)], or #[repr(transparent)]
  --> tests/ui-msrv/union.rs:51:10
   |
51 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be #[repr(C)], #[repr(packed)], or #[repr(transparent)]
  --> tests/ui-msrv/union.rs:58:10
   |
58 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive `Unaligned` on type with alignment greater than 1
  --> tests/ui-msrv/union.rs:71:11
   |
71 | #[repr(C, align(2))]
   |           ^^^^^

error: this conflicts with another representation hint
  --> tests/ui-msrv/union.rs:88:16
   |
88 | #[repr(packed, align(2))]
   |                ^^^^^

error: this conflicts with another representation hint
  --> tests/ui-msrv/union.rs:95:18
   |
95 | #[repr(align(1), align(2))]
   |                  ^^^^^

error: this conflicts with another representation hint
   --> tests/ui-msrv/union.rs:102:18
    |
102 | #[repr(align(2), align(4))]
    |                  ^^^^^

error: must have #[repr(C)], #[repr(transparent)], or #[repr(packed)] attribute in order to guarantee this type's alignment
   --> tests/ui-msrv/union.rs:107:10
    |
107 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)], #[repr(transparent)], or #[repr(packed)] attribute in order to guarantee this type's alignment
   --> tests/ui-msrv/union.rs:114:10
    |
114 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<()>: zerocopy_renamed::Immutable` is not satisfied
  --> tests/ui-msrv/union.rs:25:10
   |
25 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `zerocopy_renamed::Immutable` is not implemented for `UnsafeCell<()>`
   |
   = note: required because of the requirements on the impl of `zerocopy_renamed::Immutable` for `ManuallyDrop<UnsafeCell<()>>`
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): PaddingFree<IntoBytes2, 1_usize>` is not satisfied
  --> tests/ui-msrv/union.rs:42:10
   |
42 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ the trait `PaddingFree<IntoBytes2, 1_usize>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as PaddingFree<T, 0_usize>>
   = help: see issue #48214
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
